# cifar-100-image-classification

./: .gitignore  README.md  models-testing-results.json  models-training-results.json  pyproject.toml  try_model.ipynb
image_classifier/: __main__.py  common_errors.py  config.py  main.py
image_classifier/data/: build_indoor_scenes_image_folder_dataset.py  cifar_100.py  indoor_scenes_dataset.py
image_classifier/data/commands/: build_indoor_scenes_image_folder_dataset.py
image_classifier/models/: convolutional_net.py  custom_convolutional_net.py  named_neural_net.py  res_net.py  test_time_augmentation.py
image_classifier/research/: metrics.py  models-results.json
image_classifier/research/commands/: arbitrary_image_inference.py  compare_models_results.py  plot_loss_and_accuracy_curves.py  view_cifar_100_dataset.py  view_indoor_scenes_dataset.py
image_classifier/research/lib/: arbitrary_image_inference.py  metrics.py  plotting.py
image_classifier/test/: test.py
image_classifier/test/commands/: test_model_from_checkpoint.py
image_classifier/test/lib/: test.py
image_classifier/train/: metrics.py  test.py
image_classifier/train/commands/: train.py
image_classifier/train/lib/: training_checkpoint.py
image_classifier/utils/: click_cli.py  dataclass_from_dict.py  default_device.py  seeding.py  train_test_split.py
scripts/: download-indoor-scenes-dataset.sh
