[tool.poetry]
name = "image-classifier"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
torch = "^2.6.0"
torchvision = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
