[tool.poetry]
name = "image-classifier"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
package-mode = true

[tool.poetry.scripts]
image-classifier = "image_classifier.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.8"
torch = "^2.6.0"
torchvision = "^0.21.0"
matplotlib = "^3.10.0"
pyqt5 = "^5.15.11"
torchmetrics = "^1.6.1"
ttach = "^0.0.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
